# AiHarmony

./: .bettercodehub.yml  .gitignore  .htaccess  404.php  README.md  contact.php  docs.php  editor.html  exercise.php  exercises.php  index.html  index.php  load.php  package-lock.json  package.json  pass_reset.php  privacy.php  publish-exercise.php  reg.php  test.js  test_mail.php  tos.html  tos.php  user.php  users.php  v2019-01-11.php
.github/ISSUE_TEMPLATE/: bug-report-or-question.md
css/: main.css  oldstyle.php  style.php
doc/: Artinfuser Harmony rules.docx  Artinfuser_Counterpoint_rules.txt  Artinfuser_Harmony_rules.docx  ~$tinfuser Harmony rules.docx
docs/: Artinfuser Harmony rules.docx  index.html  ~$tinfuser Harmony rules.docx
docs/prod/: .htaccess  docs.php  editor.html  exercise.php  exercises.php  index.html  index.php  info.php  login.php  manifest.json  privacy.html  profile.php  publish-exercise.php  test.html  user.php  users.php
docs/versions/: 2019-01-11.html
img/: email.psd
img/work/: note.psd  play.psd  text.psd
js/: MusicXmlParser.js  NotesData.js  abchelper.js  audio.js  base64.js  clefs.js  commands.js  cookie.js  dataToAbc.js  edit.js  harmdata.js  harmony.js  history.js  init.js  keys.js  keysig.js  lib.js  mobileCheck.js  modal.js  musicXmlToData.js  notesData.js  noteshelper.js  state.js  test-harmony.js  test-xml.js  timesig.js  ui.js  uilib.js  urlparams.js
js/MusicXml/: MusicXmlParser.js  (+5 more)
js/analysis/cpp/: CMakeLists.txt
js/analysis/cpp/src/: includes.h
js/analysis/cpp/src/Algorithms/CA3/: result.h
js/analysis/cpp/src/Algorithms/GLibrary/: GLib.cpp
js/analysis/cpp/src/Export/: CA3.cpp  HA1.cpp
js/analysis/cpp/src/Interface/: Plain2data.h  base256.cpp  errors.cpp  errors.h
js/analysis/cpp/src/Util/: stringUtil.cpp
lib/: CsvDb.php  alib.php  analytics.php  auth.php  config.php  config.php.bak  diff.php  doclib.php  elib.php  falib.php  flib.php  fxlib.php  layout.php  lib.php  midi_lib.php  mlib.php  mtlib.php  noteinfo.php  plib.php  proll.php  reports.php  sentry.php  sliderlib.php  sliderlib2.php  support.php  support_admin.php  uplib.php  xca.php  xfi.php
md/: _menu.txt  co_start.md  cp_analyse.md  cp_compose.md  cp_examples.md  cp_harm_notations.md  cp_rules.md  cp_start.md
musicxml/: 2018-04-ideal-cp5.xml  2018-04-norm-cp5.xml  MTE 1110 - TS2 - Exemples-mod.xml  gallon-v6sp1.xml  gallon-v7sp1.xml  good-cp3.xml  good-cp4.xml  sposobin-exercise-312-1.xml  sposobin-exercise-335-1.xml  sposobin-exercise-335-2.xml
template/: footer.php  guest-algo.php  guest-counterpoint.php  main.php  menu.php  privacy.php
test_data/: test1 (1).abc  test1.abc  test1.ca3  test1.plain  test2.ca3  test2.plain  test2.xml
work/: .htaccess  basic-editor.html  build_prod.bat  build_version.bat  declared.php  load.php  object.php  package-lock.json  package.json  pages.txt  paul-test-shapes.html  paul-test-shapes2.html  pdf_targets.py  test-chorus.php  test-pinch-zoom.php  test.html  testpromise.php
(+358 files in other folders)
